--- a/Projtester/Makefile
+++ b/Projtester/Makefile
@@ -14,7 +14,8 @@ RM		= rm -f
 SRC		= src/main.c \
 		src/print_flag_h.c \
 		src/print_arg.c \
-		src/print_arg_2.c \
+		src/algo_2.c \
+		src/flag_cat.c \
 		
 
 OBJ		= $(SRC:.c=.o)
